# svgpm

./: CITATION.cff  CMakeLists.txt  README.md  SVGPM_Python_DEAP.ipynb  experiment.param  experiment2.param  experiment3.param  experiment_gsvm.param  fisher.txt  run_experiment.py  run_experiment_gsvm.py
app/: CMakeLists.txt  gsvm.cpp  main3.cpp  main4.cpp  svgpm.cpp  svgpm_useless.cpp_old  svgpm_v2.cpp
datasets/imbadatanorm/: abalone.csv  abalone_19.csv  arrhythmia.csv  car_eval_34.csv  car_eval_4.csv  coil_2000.csv  ecoli.csv  fertility.csv  glass4.csv  glass5.csv  iris2.csv  isolet.csv  letter_img.csv  libras_move.csv  mammography.csv  oil.csv  optical_digits.csv  ozone_level.csv  page-blocks_3.csv  pen_digits.csv  protein_homo.csv  satimage.csv  scene.csv  sick_euthyroid.csv  solar_flare_m0.csv  spectrometer.csv  thyroid_sick.csv  us_crime.csv  webpage.csv  wine_quality.csv  yeast_me2.csv  yeast_ml8.csv  yeast_ml8.csvGP_l2_CS_svm.result
svgpm-libs/: BinaryConfusionMatrix.h  CMakeLists.txt  DecisionTree.cpp  DecisionTree.h  GPAProgram.cpp  GPAProgram.h  GPAttributePrimitive.cpp  GPAttributePrimitive.h  GPSVMGM.cpp  GPSVMGM.h  Puppy.cpp
